--- a/requirements.txt
+++ b/requirements.txt
@@ -1,357 +1,6 @@
 gunicorn
-absl-py==0.14.1
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-alembic==1.7.7
-anaconda-client==1.7.2
-anaconda-navigator==2.0.3
-anaconda-project @ file:///tmp/build/80754af9/anaconda-project_1610472525955/work
-anyio @ file:///opt/concourse/worker/volumes/live/64740ac7-3a9c-4fbb-6685-a51c4ff8b4ca/volume/anyio_1617783319350/work/dist
-appdirs==1.4.4
-applaunchservices==0.2.1
-appnope @ file:///opt/concourse/worker/volumes/live/5f13e5b3-5355-4541-5fc3-f08850c73cf9/volume/appnope_1606859448618/work
-appscript @ file:///opt/concourse/worker/volumes/live/82e8b4c7-2416-4d10-509e-144ca79d9b1d/volume/appscript_1611426996703/work
-argh==0.26.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.4.1
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///opt/concourse/worker/volumes/live/343a8902-287c-47fb-6db8-923a63364302/volume/astroid_1613500849157/work
-astropy @ file:///opt/concourse/worker/volumes/live/0a514e04-301a-48f9-530f-90365df6420e/volume/astropy_1617745469121/work
-asttokens==2.0.5
-astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-atomicwrites==1.4.0
-attrs==21.4.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work
-Babel @ file:///tmp/build/80754af9/babel_1607110387436/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
-backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil_get_terminal_size_1608222128777/work
-backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
-backports.weakref==1.0.post1
-beautifulsoup4==4.10.0
-bitarray @ file:///opt/concourse/worker/volumes/live/21dd8f41-3cae-47b4-5fab-684b9b2db14f/volume/bitarray_1618434866960/work
-bkcharts==0.2
-black==19.10b0
-bleach==4.1.0
-blis==0.7.7
-bokeh @ file:///opt/concourse/worker/volumes/live/65ce9588-f765-4deb-5b52-1c552a693654/volume/bokeh_1620783891289/work
-Boruta==0.3
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-bs4==0.0.1
-cachetools==4.2.4
-catalogue==1.0.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet @ file:///opt/concourse/worker/volumes/live/c798b2ee-88b1-4341-6830-161a92c2399e/volume/chardet_1607706832595/work
-charset-normalizer==2.0.12
-clang==5.0
-click==8.1.0
-cloudpickle==2.0.0
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-colorlover==0.3.0
-conda==4.10.1
-conda-build==3.21.4
-conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
-conda-package-handling @ file:///opt/concourse/worker/volumes/live/73497069-9b43-4ad9-50ec-1abb340e14eb/volume/conda-package-handling_1618262140058/work
-conda-repo-cli @ file:///tmp/build/80754af9/conda-repo-cli_1620168426516/work
-conda-token @ file:///tmp/build/80754af9/conda-token_1620076980546/work
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-cryptography @ file:///opt/concourse/worker/volumes/live/c515855a-effc-46df-74dc-542901b701da/volume/cryptography_1616769282442/work
-cufflinks==0.17.3
-cycler==0.11.0
-cymem==2.0.6
-Cython @ file:///opt/concourse/worker/volumes/live/da4db94a-3449-4978-4400-64181f888dab/volume/cython_1618435143829/work
-cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1617390489108/work
-databricks-cli==0.16.4
-debugpy==1.6.0
-decorator==5.1.1
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distlib==0.3.4
-distributed @ file:///opt/concourse/worker/volumes/live/061a375f-fbe4-45b4-4d80-0ba96d3ee7cb/volume/distributed_1617384077473/work
-Django==2.0.1
-django-bootstrap-datepicker-plus==4.0.0
-django-crispy-forms==1.7.0
-django-formtools==2.3
-django-shapeshifter==18.9.23
-django-widget-tweaks==1.4.12
-docker==5.0.3
-docutils @ file:///opt/concourse/worker/volumes/live/c75adaac-4aab-4f8b-53ac-e2f0ae899bdf/volume/docutils_1617481416178/work
-entrypoints==0.4
-et-xmlfile==1.0.1
-executing==0.8.3
-fastcache==1.1.0
-filelock==3.4.2
-flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
-Flask==2.1.0
-flatbuffers==1.12
-fonttools==4.31.2
-fsspec @ file:///tmp/build/80754af9/fsspec_1617959894824/work
-funcy==1.17
-future==0.18.2
-gast==0.4.0
-gensim==3.8.3
-gevent @ file:///opt/concourse/worker/volumes/live/123efac8-0706-463e-4084-078386897222/volume/gevent_1616772940436/work
-gitdb==4.0.9
-GitPython==3.1.27
-glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-gmpy2==2.0.8
-google-auth==2.3.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.41.0
-gunicorn==20.1.0
-h5py==3.1.0
-HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-htmlmin==0.1.12
-idna==3.3
-ImageHash==4.2.1
-imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-imbalanced-learn==0.7.0
-importlib-metadata==4.11.3
-importlib-resources==5.6.0
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-install==1.3.5
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel==6.10.0
-ipython==8.2.0
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets==7.7.0
-isort @ file:///tmp/build/80754af9/isort_1616355431277/work
-itsdangerous==2.1.2
-jdcal==1.4.1
-jedi==0.18.1
-Jinja2==3.1.1
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-json5==0.9.5
-jsonschema==4.4.0
-jupyter==1.0.0
-jupyter-client==7.2.0
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core==4.9.2
-jupyter-packaging @ file:///tmp/build/80754af9/jupyter-packaging_1613502826984/work
-jupyter-server @ file:///opt/concourse/worker/volumes/live/4f2e970c-4cba-4227-75ae-10ebe3b5f9c3/volume/jupyter_server_1616084051538/work
-jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1619133235951/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1617134334258/work
-jupyterlab-widgets==1.1.0
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-keyring @ file:///opt/concourse/worker/volumes/live/107edf16-ab8b-49bb-692b-65f944af2b43/volume/keyring_1614616747185/work
-kiwisolver==1.4.2
-kmodes==0.11.1
-lazy-object-proxy @ file:///opt/concourse/worker/volumes/live/e4bc3ba3-f365-4387-5772-cbb667714c62/volume/lazy-object-proxy_1616529072711/work
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-lightgbm==3.3.2
-llvmlite==0.37.0
-locket==0.2.1
-lxml @ file:///opt/concourse/worker/volumes/live/42fc56a4-88b4-4605-6037-9605f4e5eeeb/volume/lxml_1616443240194/work
-Mako==1.2.0
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-missingno==0.5.1
-mistune @ file:///opt/concourse/worker/volumes/live/95802d64-d39c-491b-74ce-b9326880ca54/volume/mistune_1594373201816/work
-mkl-fft==1.3.0
-mkl-random @ file:///opt/concourse/worker/volumes/live/54b31a45-1da5-4512-5c3a-93c9ff2af8bc/volume/mkl_random_1618853970587/work
-mkl-service==2.3.0
-mlflow==1.24.0
-mlxtend==0.19.0
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1613676688952/work
-mpmath==1.2.1
-msgpack @ file:///opt/concourse/worker/volumes/live/d7400f3a-e5de-4e85-5d4c-0c984c648401/volume/msgpack-python_1612287157185/work
-multimethod==1.7
-multipledispatch==0.6.0
-murmurhash==1.0.6
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient==0.5.13
-nbconvert==6.4.5
-nbformat==5.2.0
-nest-asyncio==1.5.4
-networkx==2.7.1
-nltk==3.7
-nose @ file:///tmp/build/80754af9/nose_1606773131901/work
-notebook==6.4.10
-numba==0.54.1
-numexpr==2.8.1
-numpy==1.19.5
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauthlib==3.1.1
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.1
-pandas-profiling==3.1.0
-pandocfilters==1.5.0
-parso==0.8.3
-partd @ file:///tmp/build/80754af9/partd_1618000087440/work
-path @ file:///opt/concourse/worker/volumes/live/6493576b-552d-426b-432c-5e0fafcd8a43/volume/path_1614022213143/work
-pathlib2 @ file:///opt/concourse/worker/volumes/live/cca4007b-e85e-4f77-430e-d30b2149548d/volume/pathlib2_1607024978319/work
-pathspec==0.7.0
-patsy==0.5.2
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-phik==0.12.2
-pickle-mixin==1.0.2
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.0.1
-pkginfo==1.7.0
-plac==1.1.3
-platformdirs==2.4.1
-plotly==5.6.0
-pluggy @ file:///opt/concourse/worker/volumes/live/2d655872-b6f5-4225-538c-dd87e481f5c8/volume/pluggy_1615976700299/work
-ply==3.11
-preshed==3.0.6
-prometheus-client==0.13.1
-prometheus-flask-exporter==0.19.0
-prompt-toolkit==3.0.28
-protobuf==3.19.4
-psutil==5.9.0
-psycopg2-binary==2.9.2
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval==0.2.2
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycaret==2.3.9
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycosat==0.6.3
-pycparser==2.21
-pycurl==7.43.0.6
-pydantic==1.9.0
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
-pyerfa @ file:///opt/concourse/worker/volumes/live/499ad55d-d083-454d-5032-b5d62181519d/volume/pyerfa_1619390898734/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments==2.11.2
-pyLDAvis==3.2.2
-pylint @ file:///opt/concourse/worker/volumes/live/39bfc6db-5da7-4bc4-5240-e8a1167491ff/volume/pylint_1617135827184/work
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
-pynndescent==0.5.6
-pyod==0.9.8
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing==3.0.7
-pyrsistent==0.18.1
-PySocks @ file:///opt/concourse/worker/volumes/live/85a5b906-0e08-41d9-6f59-084cee4e9492/volume/pysocks_1594394636991/work
-pytest==6.2.3
-python-dateutil==2.8.2
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
-pytz==2022.1
-PyWavelets==1.3.0
-PyYAML==5.4.1
-pyzmq==22.3.0
-QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
-QtPy==1.9.0
-querystring-parser==1.2.4
-regex==2022.3.15
-requests==2.27.1
-requests-oauthlib==1.3.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa==4.7.2
-Rtree @ file:///opt/concourse/worker/volumes/live/7b97d6e1-aeee-4f6d-418c-32be5bbd5ed3/volume/rtree_1618420839839/work
-ruamel-yaml-conda @ file:///opt/concourse/worker/volumes/live/53b096c9-f5b7-4029-7f1b-056927554e08/volume/ruamel_yaml_1616016691174/work
-scikit-image==0.18.1
-scikit-learn==1.0.2
-scikit-plot==0.3.7
-scipy==1.8.0
-seaborn==0.11.2
-Send2Trash==1.8.0
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
-six==1.16.0
-smart-open==5.2.1
-smmap==5.0.0
-sniffio @ file:///opt/concourse/worker/volumes/live/1faeb672-6d3f-4f1f-7861-294fcf282962/volume/sniffio_1614030462215/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-soupsieve==2.3.1
-spacy==2.3.7
-Sphinx @ file:///tmp/build/80754af9/sphinx_1620777493457/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///opt/concourse/worker/volumes/live/b2db1f66-1cfc-4529-6e21-61097ab49952/volume/spyder_1616775698806/work
-spyder-kernels @ file:///opt/concourse/worker/volumes/live/12a19b85-7733-4e39-55a2-982abb6f0274/volume/spyder-kernels_1614030593315/work
-SQLAlchemy==1.4.32
-sqlparse==0.4.2
-srsly==1.0.5
-stack-data==0.2.0
-statsmodels==0.13.2
-sympy @ file:///opt/concourse/worker/volumes/live/0bf7d347-8399-4af8-5e6f-4267d4aabdd9/volume/sympy_1618255318469/work
-tables==3.6.1
-tabulate==0.8.9
-tangled-up-in-unicode==0.1.0
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-tenacity==8.0.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-terminado==0.13.3
-testpath==0.6.0
-textblob==0.17.1
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-thinc==7.4.5
-threadpoolctl==3.1.0
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tifffile==2020.10.1
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-tornado @ file:///opt/concourse/worker/volumes/live/05341796-4198-4ded-4a9a-332fde3cdfd1/volume/tornado_1606942323372/work
-tqdm==4.63.1
-traitlets==5.1.1
-typed-ast @ file:///opt/concourse/worker/volumes/live/b635b0af-0037-435d-5a8b-38d096f36bbf/volume/typed-ast_1610484559102/work
-typing_extensions==4.1.1
-ujson @ file:///opt/concourse/worker/volumes/live/b4182deb-c6ce-4bc8-7783-61027c162049/volume/ujson_1611259506235/work
-umap-learn==0.5.2
-unicodecsv==0.14.1
-urllib3==1.26.9
-virtualenv==20.13.0
-visions==0.7.4
-wasabi==0.9.0
-watchdog @ file:///opt/concourse/worker/volumes/live/ba071b65-d6ec-4539-5875-0791be503584/volume/watchdog_1612471127391/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-websocket-client==1.3.2
-Werkzeug==2.1.0
-widgetsnbextension==3.6.0
-wordcloud==1.8.1
-wrapt @ file:///opt/concourse/worker/volumes/live/e3646d84-e961-4523-6bed-01532273c57e/volume/wrapt_1597851473852/work
-wurlitzer @ file:///opt/concourse/worker/volumes/live/bf42cded-f988-433c-5eca-a88c3905d29b/volume/wurlitzer_1617224650715/work
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1617224712951/work
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-yellowbrick==1.3.post1
-zict==2.0.0
-zipp==3.7.0
-zope.event==4.5.0
-zope.interface @ file:///opt/concourse/worker/volumes/live/2b8309a3-732c-445e-5670-ab75beb9637c/volume/zope.interface_1616357204515/work
+Flask
+pickle-mixin
+pandas
+numpy
+sklearn
